# build-your-own-os

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  linker.ld  test.md
.cargo/: config.toml
.cursor/rules/: rust-rule.mdc
script/: run.sh  run_rs.sh
src/: boot.S  fs.rs  kernel.c  kernel.rs  main.rs  memory.rs  process.rs  uart.rs
src-manual/: README.md  boot.S.template  fs.rs  fs.rs.template  main.rs  main.rs.template  memory.rs  memory.rs.template  process.rs  process.rs.template  uart.rs.template
tests/: helper_script.rs  implementation_comparison.rs
