[package]
name = "rust-os-1000-lines"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# RISC-V 관련 라이브러리
riscv = "0.10.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
default = [] 
