[package]
name = "rust-os-1000-lines"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
default = ["auto"] 
auto = []      # src 폴더 사용 (자동 생성된 코드)
manual = []    # src 폴더 사용 (수동으로 작성된 코드)
